syntax= "proto3";

package proto;
import "service.proto";

service ServiceAccount{
    rpc CreateServiceAccountService(ServiceAccountService) returns (ServiceResponse){}
    rpc GetServiceAccountService(ServiceAccountService) returns (ServiceResponse){}
    rpc PutServiceAccountService(ServiceAccountService) returns (ServiceResponse){}
    rpc PatchServiceAccountService(ServiceAccountService) returns (ServiceResponse){}
    rpc DeleteServiceAccountService(ServiceAccountService) returns (ServiceResponse){}
}


message ServiceAccountService{
    string service_id = 1;
    string token = 2;
    string project_id=3;
    string company_id = 5;
    string name = 6;
    string namespace =7;
    string service_type=8;
    string service_sub_type=9;
    string version=10;
    ServiceAccountAttributes serviceAccountAttributes = 11;

}

message ServiceAccountServiceResponse {
    string error = 1;
    ServiceAccountService resp = 2;
}

message ServiceAccountAttributes{
    repeated string secrets = 1;
    repeated string imagePullSecretsName = 2;
}
